--- a/index.html
+++ b/index.html
@@ -16,21 +16,19 @@
     <!--header-->
     <header>
       <div class="header" href="/">
-        <img class="header-logo" 
-        src="logo.png" 
-        alt="Logo"
-        class="header-logo-image" 
+        <img
+          class="header-logo"
+          src="logo.png"
+          alt="Logo"
+          class="header-logo-image"
         />
         <nav class="header-menu-list">
           <a href="#" class="header-menu-link">Франшиза</a>
           <a href="#" class="header-menu-link">Калькулятор дохода</a>
           <a href="#" class="header-menu-link">Открыть бизнес</a>
         </nav>
-        <button class="header-button">
-          Контакты
-        </button>
-        <button class="header-button-menu">
-        </button>
+        <button class="header-button">Контакты</button>
+        <button class="header-button-menu"></button>
       </div>
     </header>
     <!--header-->
@@ -70,18 +68,15 @@
     <!--block_advantage-->
     <div class="block-advantage">
       <div class="container">
-        <h2 class="block-advantage-title">
-          Преимущества
-        </h2>
+        <h2 class="block-advantage-title">Преимущества</h2>
         <div class="block-advantage-map">
           <div class="block-advantage-card">
             <div class="block-advantage-card-icon">
-              <img class="block-advantage-card-icon-background" 
-              src="_Path_.png" 
+              <img
+                class="block-advantage-card-icon-background"
+                src="_Path_.png"
               />
-              <img class="block-advantage-card-icon-home" 
-              src="Vector.svg" 
-              />
+              <img class="block-advantage-card-icon-home" src="Vector.svg" />
             </div>
             <h3>Сила бренда</h3>
             <p>
@@ -91,16 +86,13 @@
           </div>
           <div class="block-advantage-card">
             <div class="block-advantage-card-icon">
-              <img class="block-advantage-card-icon-background" 
-              src="_Path_.png" 
+              <img
+                class="block-advantage-card-icon-background"
+                src="_Path_.png"
               />
-              <img class="block-advantage-card-icon-home" 
-              src="Group.svg" 
-              />
+              <img class="block-advantage-card-icon-home" src="Group.svg" />
             </div>
-            <h3>
-              Комфорт и удобство
-            </h3>
+            <h3>Комфорт и удобство</h3>
             <p>
               Быстрый подбор и получение товара на сайте и в магазине. Храним
               шины и оказываем множество других услуг
@@ -108,16 +100,13 @@
           </div>
           <div class="block-advantage-card">
             <div class="block-advantage-card-icon">
-              <img class="block-advantage-card-icon-background" 
-              src="_Path_.png" 
+              <img
+                class="block-advantage-card-icon-background"
+                src="_Path_.png"
               />
-              <img class="block-advantage-card-icon-home" 
-              src="Group1.svg" 
-              />
+              <img class="block-advantage-card-icon-home" src="Group1.svg" />
             </div>
-            <h3>
-              Консультация
-            </h3>
+            <h3>Консультация</h3>
             <p>
               Собственный контакт-центр с круглосуточной квалифицированной
               консультацией
@@ -125,16 +114,13 @@
           </div>
           <div class="block-advantage-card">
             <div class="block-advantage-card-icon">
-              <img class="block-advantage-card-icon-background" 
-              src="_Path_.png" 
+              <img
+                class="block-advantage-card-icon-background"
+                src="_Path_.png"
               />
-              <img class="block-advantage-card-icon-home" 
-              src="Vector1.svg" 
-              />
+              <img class="block-advantage-card-icon-home" src="Vector1.svg" />
             </div>
-            <h3>
-              Гарантия качества
-            </h3>
+            <h3>Гарантия качества</h3>
             <p>
               Собственный учебный центр повышения квалификации сотрудников любой
               специализации
@@ -142,16 +128,13 @@
           </div>
           <div class="block-advantage-card">
             <div class="block-advantage-card-icon">
-              <img class="block-advantage-card-icon-background" 
-              src="_Path_.png" 
+              <img
+                class="block-advantage-card-icon-background"
+                src="_Path_.png"
               />
-              <img class="block-advantage-card-icon-home" 
-              src="Vector2.svg" 
-              />
+              <img class="block-advantage-card-icon-home" src="Vector2.svg" />
             </div>
-            <h3>
-              Онлайн и рядом
-            </h3>
+            <h3>Онлайн и рядом</h3>
             <p>
               Огромный выбор товаров на сайте и в магазинах, подобранных по
               эффективной матрице
@@ -159,16 +142,13 @@
           </div>
           <div class="block-advantage-card">
             <div class="block-advantage-card-icon">
-              <img class="block-advantage-card-icon-background" 
-              src="_Path_.png" 
+              <img
+                class="block-advantage-card-icon-background"
+                src="_Path_.png"
               />
-              <img class="block-advantage-card-icon-home" 
-              src="Group2.svg" 
-              />
+              <img class="block-advantage-card-icon-home" src="Group2.svg" />
             </div>
-            <h3>
-              Промоактивности
-            </h3>
+            <h3>Промоактивности</h3>
             <p>
               Множество акций и конкурсов с призами на всех каналах продаж, а
               также программа лояльности для постоянных клиентов
@@ -179,75 +159,80 @@
     </div>
     <!--block_advantage-->
     <!--block_forma-->
-    <div class="container">
-      <div class="block_forma__title1">
-        <h2>Выберите свой формат</h2>
-        <div class="block__forma">
-          <div class="toggle__content">
-            <label class="toggle_label">
-              <input type="checkbox" class="toggle__check" checked />
-              <div class="toggle__rail">
-                <span class="toggle__circle"></span>
-                <span class="toggle__border"></span>
-              </div>
-            </label>
-          </div>
+    <div class="block-forma">
+      <div class="container">
+        <h2 class="block-forma-title">Выберите свой формат</h2>
+        <div class="block-forma-switch">
+          <label class="block-forma-switch-toggle_label">
+            <input type="checkbox" class="toggle__check" checked />
+            <div class="toggle__rail">
+              <span class="toggle__circle"> </span>
+              <span class="toggle__border"> </span>
+            </div>
+          </label>
         </div>
-        <div class="block__forma_menu">
-          <div class="block_forma_menu1">
-            <div class="block_forma_buttons">
-              <button class="block_forma_button">Шинный центр</button>
-              <button class="block_forma_button">Пункт выдачи заказов</button>
+        <div class="block-forma-menu">
+          <div class="block-forma-menu1">
+            <div class="block-forma-menu1-buttons">
+              <button class="block-forma-menu1-button">Шинный центр</button>
+              <button class="block-forma-menu1-button">
+                Пункт выдачи заказов
+              </button>
             </div>
             <p>
               Владельцам шинных центров<br />Обновим ваш центр в фирменном стиле
               «Колеса Даром». Центр включает в себя склад для<br />
               хранения, пост сервисного обслуживания и торговый зал.
             </p>
-            <div class="block_forma_menu1_price">
-              <div class="block_forma_menu1_price_description">
-                <h4 class="block__forma_title4">от 200 тыс. ₽</h4>
+            <div class="block-forma-menu1-price">
+              <div class="block-forma-menu1-price-description">
+                <h4 class="block-forma-menu1-title4">от 200 тыс. ₽</h4>
                 <p>Размер инвестиций</p>
               </div>
-              <div class="block_forma_menu1_price_description">
-                <h4 class="block__forma_title4">130 тыс. ₽</h4>
+              <div class="block-forma-menu1-price-description">
+                <h4 class="block-forma-menu1-title4">130 тыс. ₽</h4>
                 <p>Паушальный взнос</p>
               </div>
-              <div class="block_forma_menu1_price_description">
-                <h4 class="block__forma_title4">2,5 тыс. ₽</h4>
+              <div class="block-forma-menu1-price-description">
+                <h4 class="block-forma-menu1-title4">2,5 тыс. ₽</h4>
                 <p>Роялти</p>
               </div>
-              <div class="block_forma_menu1_price_description">
-                <h4 class="block__forma_title4">от 50 м2</h4>
+              <div class="block-forma-menu1-price-description">
+                <h4 class="block-forma-menu1-title4">от 50 м2</h4>
                 <p>
                   Площадь<br />
                   помещения
                 </p>
               </div>
             </div>
-            <div class="block_forma_menu_content">
-              <h4 class="block__forma_title4">В пакет включено</h4>
-              <div class="block_forma_content_description">
-                <p class="block_forma_content">Дизан проект</p>
-                <p class="block_forma_content">Обучение</p>
-                <p class="block_forma_content">Продвижение</p>
-                <p class="block_forma_content">IT-инфраструктура</p>
-                <p class="block_forma_content">Call-центр</p>
-                <p class="block_forma_content">Стандарты работы</p>
-                <p class="block_forma_content">Персональный менеджер</p>
-                <p class="block_forma_content">Оптовые цены</p>
+            <div class="block-forma-menu1-content">
+              <h4 class="block-forma-menu1-title4">В пакет включено</h4>
+              <div class="block-forma-menu1-content-description">
+                <p class="block-forma-menu1-content-name">Дизан проект</p>
+                <p class="block-forma-menu1-content-name">Обучение</p>
+                <p class="block-forma-menu1-content-name">Продвижение</p>
+                <p class="block-forma-menu1-content-name">IT-инфраструктура</p>
+                <p class="block-forma-menu1-content-name">Call-центр</p>
+                <p class="block-forma-menu1-content-name">Стандарты работы</p>
+                <p class="block-forma-menu1-content-name">
+                  Персональный менеджер
+                </p>
+                <p class="block-forma-menu1-content-name">Оптовые цены</p>
               </div>
             </div>
-            <div class="block_forma_content1">
+            <div class="block-forma-menu1-content-list">
               <p>Фотогалерея</p>
               <p>Калькулятор дохода</p>
             </div>
           </div>
-          <div class="block_forma_menu2">
+          <div class="block-forma-menu2">
             <div class="block_forma_title_income">
-              <h4 class="block__forma_title4">Ваш доход</h4>
+              <h4 class="block-forma-menu1-title4">Ваш доход</h4>
             </div>
-            <p>2 500 000 ₽</p>
+            <div class="block-forma-menu2-contant">
+              <div class="block-forma-menu2-contact-description"></div>
+              <div class="block-forma-menu2-contact-description"></div>
+              <div class="block-forma-menu2-contact-description"></div>
             </div>
           </div>
         </div>
