--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="hero_form.css" />
+    <link rel="stylesheet" href="bid.css" />
     <link rel="stylesheet" href="block_advantage.css" />
     <link rel="stylesheet" href="var.css" />
     <link rel="stylesheet" href="block_forma.css" />
@@ -230,10 +230,31 @@
               <h4 class="block-forma-menu1-title4">Ваш доход</h4>
             </div>
             <div class="block-forma-menu2-contant">
-              <div class="block-forma-menu2-contact-description"></div>
-              <div class="block-forma-menu2-contact-description"></div>
-              <div class="block-forma-menu2-contact-description"></div>
+              <div class="block-forma-menu2-contact-description">
+                <h3 class="block-forma-menu2-contact-description-price">
+                  2 500 000 ₽
+                </h3>
+                <p>Мин. чистая прибыль за первый год</p>
+              </div>
+              <div class="block-forma-menu2-contact-description">
+                <h3 class="block-forma-menu2-contact-description-percent">
+                  16%
+                </h3>
+                <p>товарная наценка</p>
+              </div>
+              <div class="block-forma-menu2-contact-description">
+                <h3 class="block-forma-menu2-contact-description-percent">
+                  46%
+                </h3>
+                <p>прирост клиентской базы</p>
+              </div>
+              <button class="bid-button">Оставить заявку</button>
             </div>
+            <img
+              class="block-forma-img"
+              src="/landing-project-wheels/block-forma-img.img"
+              alt="man"
+            />
           </div>
         </div>
       </div>
