--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           </div>
           <div class="block-forma-menu2">
             <div class="block_forma_title_income">
-              <h4 class="block-forma-menu1-title4">Ваш доход</h4>
+              <h4 class="block-forma-menu2-title4">Ваш доход</h4>
             </div>
             <div class="block-forma-menu2-contant">
               <div class="block-forma-menu2-contact-description">
@@ -248,8 +248,13 @@
                 </h3>
                 <p>прирост клиентской базы</p>
               </div>
-              <button class="bid-button">Оставить заявку</button>
             </div>
+            <button class="forma-bid-button">Оставить заявку</button>
+            <img
+              class="block-forma-img-back"
+              src="/landing-project-wheels/_Path_.jpg"
+              alt="figure"
+            />
             <img
               class="block-forma-img"
               src="/landing-project-wheels/block-forma-img.img"
