--- a/index.html
+++ b/index.html
@@ -250,16 +250,18 @@
               </div>
             </div>
             <button class="forma-bid-button">Оставить заявку</button>
-            <img
-              class="block-forma-img-back"
-              src="/landing-project-wheels/_Path_.jpg"
-              alt="figure"
-            />
-            <img
-              class="block-forma-img"
-              src="/landing-project-wheels/block-forma-img.img"
-              alt="man"
-            />
+            <div class="block-forma-img">
+              <img
+                class="block-forma-img-back"
+                src="/landing-project-wheels/_Path_.jpg"
+                alt="figure"
+              />
+              <img
+                class="block-forma-img-first"
+                src="/landing-project-wheels/block-forma-img.img"
+                alt="man"
+              />
+            </div>
           </div>
         </div>
       </div>
