блок фарма сделана

--- a/index.html
+++ b/index.html
@@ -163,13 +163,11 @@
       <div class="container">
         <h2 class="block-forma-title">Выберите свой формат</h2>
         <div class="block-forma-switch">
-          <label class="block-forma-switch-toggle_label">
-            <input type="checkbox" class="toggle__check" checked />
-            <div class="toggle__rail">
-              <span class="toggle__circle"> </span>
-              <span class="toggle__border"> </span>
-            </div>
+          <label class="checkbox-ios">
+            <input type="checkbox" />
+            <span class="checkbox-ios-switch"></span>
           </label>
+          <p>У меня свой бизнес</p>
         </div>
         <div class="block-forma-menu">
           <div class="block-forma-menu1">
@@ -246,7 +244,15 @@
                 <h3 class="block-forma-menu2-contact-description-percent">
                   46%
                 </h3>
-                <p>прирост клиентской базы</p>
+                <p>
+                  прирост клиентской базы
+                  <img
+                    src="/landing-project-wheels/Subtract.jpg"
+                    alt="question"
+                    width="16px"
+                    height="16px"
+                  />
+                </p>
               </div>
             </div>
             <button class="forma-bid-button">Оставить заявку</button>
