--- a/index.html
+++ b/index.html
@@ -185,9 +185,14 @@
                   Пункт выдачи заказов
                 </button>
               </div>
-              <p>
+              <p class="block-forma-description-p">
                 Владельцам шинных центров<br />Обновим ваш центр в фирменном
                 стиле «Колеса Даром». Центр включает в себя склад для<br />
+                хранения, пост сервисного обслуживания и торговый зал.
+              </p>
+              <p class="block-forma-description-p-1023">
+                Владельцам шинных центров<br />Обновим ваш центр в фирменном
+                стиле «Колеса Даром». Центр включает в себя склад для
                 хранения, пост сервисного обслуживания и торговый зал.
               </p>
               <div class="block-forma-menu1-price">
