--- a/index.html
+++ b/index.html
@@ -164,8 +164,10 @@
       <div class="block-forma-img1023">
         <img
           class="block-forma-img-man"
-          src="/landing-project-wheels/block-forma-img.img"
+          src="/landing-project-wheels/image 152.svg"
           alt="man"
+          fill="#aac6d6"
+          fill-opacity="0.5"
         />
       </div>
       <div class="container">
@@ -191,7 +193,7 @@
                 хранения, пост сервисного обслуживания и торговый зал.
               </p>
               <p class="block-forma-description-p-1023">
-                Владельцам шинных центров<br />Обновим ваш центр в фирменном
+                Владельцам шинных центров<br/>Обновим ваш центр в фирменном
                 стиле «Колеса Даром». Центр включает в себя склад для
                 хранения, пост сервисного обслуживания и торговый зал.
               </p>
@@ -216,6 +218,12 @@
                   </p>
                 </div>
               </div>
+              <ul class="block-forma-menu1-price-middle">
+                <li ><b>—  от 200 тыс.</b> ₽ размер инвестиций</li>
+                <li ><b>—  130 тыс.</b> ₽ паушальный взнос</li>
+                <li ><b>—  2,5 тыс.</b> ₽ роялти</li>
+                <li ><b>—  от 50 м2</b> площадь помещения</li>
+              </ul>
               <div class="block-forma-menu1-content">
                 <h4 class="block-forma-menu1-title4">В пакет включено</h4>
                 <div class="block-forma-menu1-content-description">
@@ -226,7 +234,22 @@
                     IT-инфраструктура
                   </p>
                   <p class="block-forma-menu1-content-name">Call-центр</p>
+                  <p class="block-forma-menu1-content-name">Сайт</p>
                   <p class="block-forma-menu1-content-name">Стандарты работы</p>
+                  <p class="block-forma-menu1-content-name">
+                    Персональный менеджер
+                  </p>
+                  <p class="block-forma-menu1-content-name">Оптовые цены</p>
+                </div>
+                <div class="block-forma-menu1-content-description-middle">
+                  <p class="block-forma-menu1-content-name">Дизан проект</p>
+                  <p class="block-forma-menu1-content-name">Обучение</p>
+                  <p class="block-forma-menu1-content-name">Продвижение</p>
+                  <p class="block-forma-menu1-content-name">
+                    IT-инфраструктура
+                  </p>
+                  <p class="block-forma-menu1-content-name">Call-центр</p>
+                  <p class="block-forma-menu1-content-name">Сайт</p>
                   <p class="block-forma-menu1-content-name">
                     Персональный менеджер
                   </p>
