--- a/index.html
+++ b/index.html
@@ -307,6 +307,34 @@
                 />
               </div>
             </div>
+           <div class="block-forma-menu2-middle">
+                <div class="block-forma-menu2-contact-description-middle">
+                  <p >Мин. чистая прибыль за первый год</p>
+                  <h3 class="block-forma-menu2-contact-description-price-middle">
+                    2 500 000 ₽
+                  </h3>
+                </div>
+                <div class="block-forma-menu2-contact-description-middle">
+                  <p>товарная наценка</p>
+                  <h3 class="block-forma-menu2-contact-description-percent-middle">
+                    16%
+                  </h3>
+                </div>
+                <div class="block-forma-menu2-contact-description-middle">
+                  <p>
+                    прирост клиентской базы
+                    <img
+                      src="/landing-project-wheels/Subtract.jpg"
+                      alt="question"
+                      width="16px"
+                      height="16px"
+                    />
+                  </p>
+                  <h3 class="block-forma-menu2-contact-description-percent">
+                    46%
+                  </h3>
+                </div>
+              </div>
           </div>
         </div>
     <!--block_forma-->
