--- a/index.html
+++ b/index.html
@@ -179,164 +179,159 @@
           <p>У меня свой бизнес</p>
         </div>
 
-          <div class="block-forma-menu">
-            <div class="block-forma-menu1">
-              <div class="block-forma-menu1-buttons">
-                <button class="block-forma-menu1-button">Шинный центр</button>
-                <button class="block-forma-menu1-button">
-                  Пункт выдачи заказов
-                </button>
+        <div class="block-forma-menu">
+          <div class="block-forma-menu1">
+            <div class="block-forma-menu1-buttons">
+              <button class="block-forma-menu1-button">Шинный центр</button>
+              <button class="block-forma-menu1-button">
+                Пункт выдачи заказов
+              </button>
+            </div>
+            <p class="block-forma-description-p">
+              Владельцам шинных центров<br />Обновим ваш центр в фирменном стиле
+              «Колеса Даром». Центр включает в себя склад для<br />
+              хранения, пост сервисного обслуживания и торговый зал.
+            </p>
+            <p class="block-forma-description-p-1023">
+              Владельцам шинных центров<br />Обновим ваш центр в фирменном стиле
+              «Колеса Даром». Центр включает в себя склад для хранения, пост
+              сервисного обслуживания и торговый зал.
+            </p>
+            <div class="block-forma-menu1-price">
+              <div class="block-forma-menu1-price-description">
+                <h4 class="block-forma-menu1-title4">от 200 тыс. ₽</h4>
+                <p>Размер инвестиций</p>
               </div>
-              <p class="block-forma-description-p">
-                Владельцам шинных центров<br />Обновим ваш центр в фирменном
-                стиле «Колеса Даром». Центр включает в себя склад для<br />
-                хранения, пост сервисного обслуживания и торговый зал.
-              </p>
-              <p class="block-forma-description-p-1023">
-                Владельцам шинных центров<br/>Обновим ваш центр в фирменном
-                стиле «Колеса Даром». Центр включает в себя склад для
-                хранения, пост сервисного обслуживания и торговый зал.
-              </p>
-              <div class="block-forma-menu1-price">
-                <div class="block-forma-menu1-price-description">
-                  <h4 class="block-forma-menu1-title4">от 200 тыс. ₽</h4>
-                  <p>Размер инвестиций</p>
-                </div>
-                <div class="block-forma-menu1-price-description">
-                  <h4 class="block-forma-menu1-title4">130 тыс. ₽</h4>
-                  <p>Паушальный взнос</p>
-                </div>
-                <div class="block-forma-menu1-price-description">
-                  <h4 class="block-forma-menu1-title4">2,5 тыс. ₽</h4>
-                  <p>Роялти</p>
-                </div>
-                <div class="block-forma-menu1-price-description">
-                  <h4 class="block-forma-menu1-title4">от 50 м2</h4>
-                  <p>
-                    Площадь<br />
-                    помещения
-                  </p>
-                </div>
+              <div class="block-forma-menu1-price-description">
+                <h4 class="block-forma-menu1-title4">130 тыс. ₽</h4>
+                <p>Паушальный взнос</p>
               </div>
-              <ul class="block-forma-menu1-price-middle">
-                <li ><b>—  от 200 тыс.</b> ₽ размер инвестиций</li>
-                <li ><b>—  130 тыс.</b> ₽ паушальный взнос</li>
-                <li ><b>—  2,5 тыс.</b> ₽ роялти</li>
-                <li ><b>—  от 50 м2</b> площадь помещения</li>
-              </ul>
-              <div class="block-forma-menu1-content">
-                <h4 class="block-forma-menu1-title4">В пакет включено</h4>
-                <div class="block-forma-menu1-content-description">
-                  <p class="block-forma-menu1-content-name">Дизан проект</p>
-                  <p class="block-forma-menu1-content-name">Обучение</p>
-                  <p class="block-forma-menu1-content-name">Продвижение</p>
-                  <p class="block-forma-menu1-content-name">
-                    IT-инфраструктура
-                  </p>
-                  <p class="block-forma-menu1-content-name">Call-центр</p>
-                  <p class="block-forma-menu1-content-name">Сайт</p>
-                  <p class="block-forma-menu1-content-name">Стандарты работы</p>
-                  <p class="block-forma-menu1-content-name">
-                    Персональный менеджер
-                  </p>
-                  <p class="block-forma-menu1-content-name">Оптовые цены</p>
-                </div>
-                <div class="block-forma-menu1-content-description-middle">
-                  <p class="block-forma-menu1-content-name">Дизан проект</p>
-                  <p class="block-forma-menu1-content-name">Обучение</p>
-                  <p class="block-forma-menu1-content-name">Продвижение</p>
-                  <p class="block-forma-menu1-content-name">
-                    IT-инфраструктура
-                  </p>
-                  <p class="block-forma-menu1-content-name">Call-центр</p>
-                  <p class="block-forma-menu1-content-name">Сайт</p>
-                  <p class="block-forma-menu1-content-name">
-                    Персональный менеджер
-                  </p>
-                  <p class="block-forma-menu1-content-name">Оптовые цены</p>
-                </div>
+              <div class="block-forma-menu1-price-description">
+                <h4 class="block-forma-menu1-title4">2,5 тыс. ₽</h4>
+                <p>Роялти</p>
               </div>
-              <div class="block-forma-menu1-content-list">
-                <p>Фотогалерея</p>
-                <p>Калькулятор дохода</p>
+              <div class="block-forma-menu1-price-description">
+                <h4 class="block-forma-menu1-title4">от 50 м2</h4>
+                <p>
+                  Площадь<br />
+                  помещения
+                </p>
               </div>
             </div>
-            <div class="block-forma-menu2">
-              <div class="block_forma_title_income">
-                <h4 class="block-forma-menu2-title4">Ваш доход</h4>
+            <ul class="block-forma-menu1-price-middle">
+              <li><b>— от 200 тыс.</b> ₽ размер инвестиций</li>
+              <li><b>— 130 тыс.</b> ₽ паушальный взнос</li>
+              <li><b>— 2,5 тыс.</b> ₽ роялти</li>
+              <li><b>— от 50 м2</b> площадь помещения</li>
+            </ul>
+            <div class="block-forma-menu1-content">
+              <h4 class="block-forma-menu1-title4">В пакет включено</h4>
+              <div class="block-forma-menu1-content-description">
+                <p class="block-forma-menu1-content-name">Дизан проект</p>
+                <p class="block-forma-menu1-content-name">Обучение</p>
+                <p class="block-forma-menu1-content-name">Продвижение</p>
+                <p class="block-forma-menu1-content-name">IT-инфраструктура</p>
+                <p class="block-forma-menu1-content-name">Call-центр</p>
+                <p class="block-forma-menu1-content-name">Сайт</p>
+                <p class="block-forma-menu1-content-name">Стандарты работы</p>
+                <p class="block-forma-menu1-content-name">
+                  Персональный менеджер
+                </p>
+                <p class="block-forma-menu1-content-name">Оптовые цены</p>
               </div>
-              <div class="block-forma-menu2-contant">
-                <div class="block-forma-menu2-contact-description">
-                  <h3 class="block-forma-menu2-contact-description-price">
-                    2 500 000 ₽
-                  </h3>
-                  <p>Мин. чистая прибыль за первый год</p>
-                </div>
-                <div class="block-forma-menu2-contact-description">
-                  <h3 class="block-forma-menu2-contact-description-percent">
-                    16%
-                  </h3>
-                  <p>товарная наценка</p>
-                </div>
-                <div class="block-forma-menu2-contact-description">
-                  <h3 class="block-forma-menu2-contact-description-percent">
-                    46%
-                  </h3>
-                  <p>
-                    прирост клиентской базы
-                    <img
-                      src="/landing-project-wheels/Subtract.jpg"
-                      alt="question"
-                      width="16px"
-                      height="16px"
-                    />
-                  </p>
-                </div>
-              </div>
-              <button class="forma-bid-button">Оставить заявку</button>
-              <div class="block-forma-img">
-                <img
-                  class="block-forma-img-back"
-                  src="/landing-project-wheels/_Path_.jpg"
-                  alt="figure"
-                />
-                <img
-                  class="block-forma-img-first"
-                  src="/landing-project-wheels/block-forma-img.img"
-                  alt="man"
-                />
+              <div class="block-forma-menu1-content-description-middle">
+                <p class="block-forma-menu1-content-name">Дизан проект</p>
+                <p class="block-forma-menu1-content-name">Обучение</p>
+                <p class="block-forma-menu1-content-name">Продвижение</p>
+                <p class="block-forma-menu1-content-name">IT-инфраструктура</p>
+                <p class="block-forma-menu1-content-name">Call-центр</p>
+                <p class="block-forma-menu1-content-name">Сайт</p>
+                <p class="block-forma-menu1-content-name">
+                  Персональный менеджер
+                </p>
+                <p class="block-forma-menu1-content-name">Оптовые цены</p>
               </div>
             </div>
-           <div class="block-forma-menu2-middle">
-                <div class="block-forma-menu2-contact-description-middle">
-                  <p >Мин. чистая прибыль за первый год</p>
-                  <h3 class="block-forma-menu2-contact-description-price-middle">
-                    2 500 000 ₽
-                  </h3>
-                </div>
-                <div class="block-forma-menu2-contact-description-middle">
-                  <p>товарная наценка</p>
-                  <h3 class="block-forma-menu2-contact-description-percent-middle">
-                    16%
-                  </h3>
-                </div>
-                <div class="block-forma-menu2-contact-description-middle">
-                  <p>
-                    прирост клиентской базы
-                    <img
-                      src="/landing-project-wheels/Subtract.jpg"
-                      alt="question"
-                      width="16px"
-                      height="16px"
-                    />
-                  </p>
-                  <h3 class="block-forma-menu2-contact-description-percent">
-                    46%
-                  </h3>
-                </div>
+            <div class="block-forma-menu1-content-list">
+              <p>Фотогалерея</p>
+              <p>Калькулятор дохода</p>
+            </div>
+          </div>
+          <div class="block-forma-menu2">
+            <div class="block_forma_title_income">
+              <h4 class="block-forma-menu2-title4">Ваш доход</h4>
+            </div>
+            <div class="block-forma-menu2-contant">
+              <div class="block-forma-menu2-contact-description">
+                <h3 class="block-forma-menu2-contact-description-price">
+                  2 500 000 ₽
+                </h3>
+                <p>Мин. чистая прибыль за первый год</p>
               </div>
+              <div class="block-forma-menu2-contact-description">
+                <h3 class="block-forma-menu2-contact-description-percent">
+                  16%
+                </h3>
+                <p>товарная наценка</p>
+              </div>
+              <div class="block-forma-menu2-contact-description">
+                <h3 class="block-forma-menu2-contact-description-percent">
+                  46%
+                </h3>
+                <p>
+                  прирост клиентской базы
+                  <img
+                    src="/landing-project-wheels/Subtract.jpg"
+                    alt="question"
+                    width="16px"
+                    height="16px"
+                  />
+                </p>
+              </div>
+            </div>
+            <button class="forma-bid-button">Оставить заявку</button>
+            <div class="block-forma-img">
+              <img
+                class="block-forma-img-back"
+                src="/landing-project-wheels/_Path_.jpg"
+                alt="figure"
+              />
+              <img
+                class="block-forma-img-first"
+                src="/landing-project-wheels/block-forma-img.img"
+                alt="man"
+              />
+            </div>
+          </div>
+          <div class="block-forma-menu2-middle">
+            <div class="block-forma-menu2-contact-description-middle">
+              <p>Мин. чистая прибыль за первый год</p>
+              <h3 class="block-forma-menu2-contact-description-price-middle">
+                2 500 000 ₽
+              </h3>
+            </div>
+            <div class="block-forma-menu2-contact-description-middle">
+              <p>товарная наценка</p>
+              <h3 class="block-forma-menu2-contact-description-percent-middle">
+                16%
+              </h3>
+            </div>
+            <div class="block-forma-menu2-contact-description-middle">
+              <p>
+                прирост клиентской базы
+                <img
+                  src="/landing-project-wheels/Subtract.jpg"
+                  alt="question"
+                  width="16px"
+                  height="16px"
+                />
+              </p>
+              <h3 class="block-forma-menu2-contact-description-percent">46%</h3>
+            </div>
           </div>
         </div>
+      </div>
+    </div>
     <!--block_forma-->
   </body>
 </html>
