--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="block-forma-img1023">
         <img
           class="block-forma-img-man"
-          src="/landing-project-wheels/image 152.svg"
+          src="image 152.svg"
           alt="man"
           fill="#aac6d6"
           fill-opacity="0.5"
@@ -290,18 +290,6 @@
               </div>
             </div>
             <button class="forma-bid-button">Оставить заявку</button>
-            <div class="block-forma-img">
-              <img
-                class="block-forma-img-back"
-                src="/landing-project-wheels/_Path_.jpg"
-                alt="figure"
-              />
-              <img
-                class="block-forma-img-first"
-                src="/landing-project-wheels/block-forma-img.img"
-                alt="man"
-              />
-            </div>
           </div>
           <div class="block-forma-menu2-middle">
             <div class="block-forma-menu2-contact-description-middle">
@@ -320,7 +308,7 @@
               <p>
                 прирост клиентской базы
                 <img
-                  src="/landing-project-wheels/Subtract.jpg"
+                  src="Subtract.jpg"
                   alt="question"
                   width="16px"
                   height="16px"
