--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="block-forma-img1023">
         <img
           class="block-forma-img-man"
-          src="image 152.svg"
+          src="image_152.png"
           alt="man"
           fill="#aac6d6"
           fill-opacity="0.5"
