конец блок формы

--- a/index.html
+++ b/index.html
@@ -316,6 +316,15 @@
               </p>
               <h3 class="block-forma-menu2-contact-description-percent">46%</h3>
             </div>
+            <button class="forma-bid-button-middle">Оставить заявку</button>
+            <div class="block-forma-menu1-content-list-middle">
+              <button class="block-forma-menu1-content-list-button-middle">
+                Фотогалерея
+              </button>
+              <button class="block-forma-menu1-content-list-button-middle">
+                Калькулятор дохода
+              </button>
+            </div>
           </div>
         </div>
       </div>
